# Codex-Engine

./: CMakeLists.txt  LICENSE  README.md
include/Codex/: Engine.h
include/Codex/Math/: Transform.h  Vector3.h
include/Codex/Scene/: Environment.h
include/Codex/UI/: Hud.h  UiState.h
src/: Engine.cpp  main.cpp
